add skill and component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6837,6 +6837,8 @@ set(SOURCE_FILES
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/RuntimeTests/Source/RuntimeTests/Private/RuntimeTests.cpp"
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/RuntimeTests/Source/RuntimeTests/Private/Slate/RichTextMarkupProcessingTest.cpp"
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/ScreenshotTools/Source/ScreenshotTools/Private/ScreenshotTools.cpp"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/Skill.cpp"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillComponent.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTree.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeCharacter.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeGameMode.cpp"
@@ -15683,6 +15685,8 @@ set(HEADER_FILES
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/FunctionalTestingEditor/Source/Public/EditorAutomationModule.h"
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/RuntimeTests/Source/RuntimeTests/Public/RuntimeTests.h"
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/ScreenshotTools/Source/ScreenshotTools/Public/ScreenshotTools.h"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/Skill.h"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillComponent.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTree.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeCharacter.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeGameMode.h"
