rename skills component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6839,6 +6839,7 @@ set(SOURCE_FILES
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/ScreenshotTools/Source/ScreenshotTools/Private/ScreenshotTools.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/Skill.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillComponent.cpp"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsComponent.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTree.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeCharacter.cpp"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeGameMode.cpp"
@@ -15687,6 +15688,7 @@ set(HEADER_FILES
 	"${UE4_ROOT_PATH}/Engine/Plugins/Tests/ScreenshotTools/Source/ScreenshotTools/Public/ScreenshotTools.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/Skill.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillComponent.h"
+	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsComponent.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTree.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeCharacter.h"
 	"${GAME_ROOT_PATH}/Source/SkillsTree/SkillsTreeGameMode.h"
